--- a/source/widget/header/index.html
+++ b/source/widget/header/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>header</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
+    <!-- 这是当前模块样式文件 -->
     <link href="header.css" rel="stylesheet"></head>
 <body>
     <div class="row">
@@ -78,7 +81,12 @@
 
         </div>
     </div>
+    
 
+
+    <!-- 这是jquery库文件 -->
+    <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
+    <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="header.js"></script>
 </body>
 </html>
