--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>登录-欢迎来到学而思网校</title>
+    <title>错题本-欢迎来到学而思网校</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link href="css/normalize.css" type="text/css" rel="stylesheet" />
@@ -11,21 +11,42 @@
     <link href="css/error_question.css" type="text/css" rel="stylesheet"/>
     <script type="text/javascript" src="error_question.js"></script>
     <!--[if lt IE 9]>
-    <link href="http://css04.xesimg.com/ie_project.css" type="text/css" rel="stylesheet"/>
+        <link href="css/ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
 </head>
 <body>
     <div class="small-2 large-2 columns">left</div>
     <div class="small-8 large-8 columns que">
         <div class="que-head clearfix">
-            <p class="que-head-source left vertical">试题来源：《高考英语总复习年卡（一轮+二轮）（通用版）——学而思网校高中英语暑期期末考试》</p>
-            <p class="que-head-time right vertical">作答时间：2015-8-16</p>
+            <p class="que-head-source left norMargin"><span class="que-tips">试题来源：</span>《高考英语总复习年卡（一轮+二轮）（通用版）——学而思网校高中英语暑期期末考试》</p>
+            <p class="que-head-time right">作答时间：2015-8-16</p>
         </div>
-        <div class="que-ques">
-            <p class="queques--know">知识点：<span class="knowledge">写作类-高考高分作文赏析</span><span class="knowledge">代数法</span><span
-                    class="knowledge">三角函数</span></p>
+        <div class="que-point">
+            <p class="que-point-know norMargin">
+                <span class="que-tips">知识点：</span>
+                <span class="knowledge">写作类-高考高分作文赏析</span><span class="knowledge">代数法</span><span class="knowledge">三角函数</span>
+            </p>
         </div>
-        <div class="row">3</div>
+        <div class="que-body">
+            <p class="que-tips que-tips-head norMargin">题目：
+                <span class="que-body-content">甲从一个鱼摊上买了三条鱼，平均每条a元，又从另一个鱼摊上买了两条鱼，平均每条b元，后来他又以每条a+b2元的价格把鱼全部卖给了乙，结果发现赔了钱，
+原因是（ ）.</span>
+            </p>
+            <p class="norMargin que-body-choice">A、a&gtb</p>
+            <p class="norMargin que-body-choice">B、a&ltb</p>
+            <p class="norMargin que-body-choice">C、a=b</p>
+            <p class="norMargin que-body-choice">D、与a和b的大小无关．</p>
+            <p class="que-body-hide text-right">收起答案</p>
+        </div>
+        <div class="que-answer">
+            <!--用户答案为字母或者数字的情况-->
+            <p class="que-tips que-answer-head norMargin">你的答案：<span class="cusAns">A</span>正确答案：<span class="corAns">B</span></p>
+            <p class="que-tips que-answer-head norMargin">解析：<span class="explanace">由题意知，5条鱼的进价为(3a+2b)元，售价为5(a+b)2，5(a+b)2−(3a+2b)=b−a2又∵b−a2<0，所以b&lta</span></p>
+
+            <!--用户答案为图片的情况-->
+            <div class="que-tips que-answer-head norMargin">你的答案：<img class="stuAns" src="img/answer-img.png"/></div>
+            <p class="que-tips que-answer-head norMargin">正确答案：<span class="corAns">B</span></p>
+        </div>
     </div>
     <div class="small-2 large-2 columns">right</div>
 </body>
