Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courseStudycenter/courseList.html
+++ b/source/widget/courseStudycenter/courseList.html
@@ -31,14 +31,14 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied">已学习</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
+                                    <a class="button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied-end">已学到</td>
                                 <td class="text-style">
-                                    <a class="alert button btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
+                                    <a class="alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -67,7 +67,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播<span class="studied-end">（补课）</span></td>
                                 <td class="text-style yellow-mark">未参加<em class="mark"></em></td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
+                                    <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
                                 </td>
                             </tr>
                             <tr>
@@ -75,7 +75,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied-end">已开始</td>
                                 <td class="text-style">
-                                    <a class="alert button btn" href="##"><em class="button-icon icon-will-red"></em>立即上课</a>
+                                    <a class="alert button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即上课</a>
                                 </td>
                             </tr>
                             <tr>
@@ -83,7 +83,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied">已参加</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
+                                    <a class="button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
                                 </td>
                             </tr>
                             <tr>
@@ -91,7 +91,7 @@
                                 <td class="static-gray">第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied static-gray">未开始</td>
                                 <td class="text-style">
-                                    <button class="button btn btn-gray" disabled>等待回看</button>
+                                    <button class="button course-btn course-btn-gray" disabled>等待回看</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -121,8 +121,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style yellow-mark">未参加</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
                                 </td>
                                 <td class="studied-end">2015-8-10  9:00 提交截止</td>
                             </tr>
@@ -130,8 +130,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style yellow-mark">未参加</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
                                 </td>
                                 <td class="">2015-8-10  9:00 提交截止</td>
                             </tr>
@@ -139,8 +139,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style yellow-mark">已驳回</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success " href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success " href="##" >查看批改</a>
                                 </td>
                                 <td class="">2015-8-10  9:00 </td>
                             </tr>
@@ -148,8 +148,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied">已批改</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success " href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success " href="##" >查看批改</a>
                                 </td>
                                 <td class="">2015-8-10  9:00 </td>
                             </tr>
@@ -157,8 +157,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style wait-look">待批改</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success " href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success " href="##" >查看批改</a>
                                 </td>
                                 <td class="">2015-8-10  9:00 </td>
                             </tr>
@@ -184,7 +184,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style wait-look">待批改</td>
                                 <td class="text-style">
-                                    <a class="button btn success " href="##" >立即查看</a>
+                                    <a class="button course-btn success " href="##" >立即查看</a>
                                 </td>
                                 <td class="text-style">2015-8-10  9:00 </td>
                             </tr>
@@ -192,7 +192,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style">未上传</td>
                                 <td class="text-style">
-                                    <a class="button btn btn-gray" href="##" >立即查看</a>
+                                    <a class="button course-btn course-btn-gray" href="##" >立即查看</a>
                                 </td>
                                 <td class="text-style">2015-8-10  9:00 </td>
                             </tr>
@@ -200,7 +200,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied">已批改</td>
                                 <td class="text-style">
-                                    <a class="button btn success " href="##" >立即查看</a>
+                                    <a class="button course-btn success " href="##" >立即查看</a>
                                 </td>
                                 <td class="text-style">2015-8-10  9:00 </td>
                             </tr>
@@ -225,8 +225,8 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style  studied-end">未提交<span>（提交已截止）</span></td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
@@ -236,32 +236,32 @@
                                     <div class="promp-submit" style="display:none;">1111</div>
                                 </td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style yellow-mark">已驳回<span>（剩余3小时）</span><em class="mark"></em></td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success" href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style studied">已批改</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success" href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style wait-look">待批改</td>
                                 <td class="text-style">
-                                    <a class="button btn" href="##">查看作业</a>
-                                    <a class="button btn success" href="##" >查看批改</a>
+                                    <a class="button course-btn" href="##">查看作业</a>
+                                    <a class="button course-btn success" href="##" >查看批改</a>
                                 </td>
                             </tr>
                         </tbody>
