--- a/source/widget/courseStudycenter/index.html
+++ b/source/widget/courseStudycenter/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="courseList-body">
                         <p class="course-title">
-                            <label class="label blue-label">直播</label>
+                            <label class="course-label course-blue-label">直播</label>
                             <a class="title-detail" href="##">【飞遍化学】炸开你的化学世界大门(第三季)&mdash;&mdash;大揭秘 </a>
                         </p>
                         <p class="end-time">
@@ -40,9 +40,9 @@
                             <span><strong>2015-8-10（周六）9:00—11:30 </strong></span>
                         </p>
                         <p class="amount-show">
-                            <a class="small alert button btn" href="##"><em class="button-icon icon-will-red"></em>立即听课</a>
-                            <a class="small gray button btn" href="##">课程大纲<label class="newLabel">5</label></a>
-                            <a class="small gray button btn last" href="##">随堂测<label class="newLabel homeworkLabel">10</label></a>
+                            <a class="small alert button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即听课</a>
+                            <a class="small course-gray button course-btn" href="##">课程大纲<label class="newLabel">5</label></a>
+                            <a class="small course-gray button course-btn last" href="##">随堂测<label class="newLabel homeworkLabel">10</label></a>
                         </p>
                     </div>
                     <div class="courseList-teacher">
@@ -90,7 +90,7 @@
                     </div>
                     <div class="courseList-body">
                         <p class="course-title">
-                            <label class="label blue-label">直播</label>
+                            <label class="course-label course-blue-label">直播</label>
                             <a class="title-detail" href="##">【飞遍化学】炸开你的化学世界大门(第三季)&mdash;&mdash;大揭秘 </a>
                         </p>
                         <p class="end-time">
@@ -105,9 +105,9 @@
                             <span><strong>2015-8-10（周六）9:00—11:30  一天后提供回看</strong></span>
                         </p>
                         <p class="amount-show">
-                            <a class="small button btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
-                            <a class="small gray button btn" href="##">课程大纲</a>
-                            <a class="small gray button btn last" href="##">随堂测</a>
+                            <a class="small button course-btn" href="##"><em class="button-icon icon-will-red"></em>立即回看</a>
+                            <a class="small course-gray button course-btn" href="##">课程大纲</a>
+                            <a class="small course-gray button course-btn last" href="##">随堂测</a>
                         </p>
                     </div>
                     <div class="courseList-teacher">
@@ -155,7 +155,7 @@
                     </div>
                     <div class="courseList-body">
                         <p class="course-title">
-                            <label class="label green-label">录播</label>
+                            <label class="course-label course-green-label">录播</label>
                             <a class="title-detail" href="##">【飞遍化学】炸开你的化学世界大门(第三季)&mdash;&mdash;大揭秘 </a>
                         </p>
                         <p class="end-time">
@@ -170,9 +170,9 @@
                             <span><strong>2015-8-10（周六）9:00—11:30 </strong></span>
                         </p>
                         <p class="amount-show">
-                            <a class="small alert button btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
-                            <a class="small gray button btn" href="##">课程大纲</a>
-                            <a class="small gray button btn last" href="##"><label class="newLabel live-label">live</label>直播辅导</a>
+                            <a class="small alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
+                            <a class="small course-gray button course-btn" href="##">课程大纲</a>
+                            <a class="small course-gray button course-btn last" href="##"><label class="newLabel live-label">live</label>直播辅导</a>
                             <span class="direct-btn">直播辅导进行中，<a href="###">立即进入 >></a></span>
                         </p>
                     </div>
