--- a/source/widget/courses/index.html
+++ b/source/widget/courses/index.html
@@ -32,7 +32,7 @@
                         </p>
                         <p class="course-title">
                             <span class="course-tip">推荐课:</span>
-                            <label class="label blue-label">直播</label>
+                            <label class="course-label course-blue-label">直播</label>
                             <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                         </p>
                         <p class="amount-show">
@@ -56,13 +56,13 @@
                     </div>
                     <div class="course-detail">
                         <p class="course-title">
-                            <label class="label blue-label">直播</label>
-                            <label class="label yellow-label">直播</label>
+                            <label class="course-label course-blue-label">直播</label>
+                            <label class="course-label course-yellow-label">直播</label>
                             <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                         </p>
                         <p class="tip-for">适用于：想要培养化学学习兴趣的初三学员</p>
                         <p class="amount-show">
-                            <a href="##" class="small gray button btn"><em class="button-icon icon-will"></em>立即听课</a>
+                            <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-will"></em>立即听课</a>
                         </p>
                     </div>
                     <div class="course-num">
@@ -81,8 +81,8 @@
                     </div>
                     <div class="course-detail">
                         <p class="course-title">
-                            <label class="label blue-label">直播</label>
-                            <label class="label yellow-label">直播</label>
+                            <label class="course-label course-blue-label">直播</label>
+                            <label class="course-label course-yellow-label">直播</label>
                             <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                         </p>
                         <p class="tip-for">起止日期：2015.03.01 至 2015.08.31</p>
@@ -91,7 +91,7 @@
                             <span>已购买：<strong>230</strong></span>
                         </p>
                         <p class="amount-show amount-test">
-                            <a href="##" class="small gray button btn"><em class="button-icon icon-test"></em>视听直播</a>
+                            <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-test"></em>视听直播</a>
                             <strong class="test-price"><span>￥</span>13.44</strong>
                         </p>
                     </div>
