--- a/source/widget/glory/index.html
+++ b/source/widget/glory/index.html
@@ -10,7 +10,7 @@
     <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
-    <link href="Vips.css" rel="stylesheet"></head>
+    <link href="glory.css" rel="stylesheet"></head>
     <body>
         <div class="row">
             <div class="large-12 columns">
@@ -61,6 +61,6 @@
         <!-- 这是jquery库文件 -->
         <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
         <!-- 这是当前模块js文件 -->
-        <script type="text/javascript" src="Vips.js"></script>
+        <script type="text/javascript" src="glory.js"></script>
     </body>
     </html>
