修改全局样式

--- a/source/widget/courseInfor/live-back-course.html
+++ b/source/widget/courseInfor/live-back-course.html
@@ -70,7 +70,7 @@
 	</div>
 	<!-- 课程上半部分 -->
 	<div class="columns-wrap">
-	  <div class="columns-left f-left">
+	  <div class="columns-left">
 	  	 <ul class="ui-nav-link">
 	  	 	<li class="current">直播大纲(10)</li>
 	  	 	<li>点播大纲(10)</li>
@@ -183,7 +183,7 @@
 	  	 	   <!-- 课程评价 -->
 	  	 </div>
 	  </div>
-	  <div class="columns-right f-right">9 columns</div>
+	  <div class="columns-right">9 columns</div>
 	</div>
 	<!-- 课程下半部分 -->
     <!-- 这是jquery库文件 -->
