--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -15,46 +15,98 @@
     <![endif]-->
 </head>
 <body>
-    <div class="small-2 large-2 columns">left</div>
-    <div class="small-8 large-8 columns">
+    <div class="small-1 large-2 columns">left</div>
+    <div class="small-10 large-8 columns">
 
-        <!--错题本题目展示分栏-->
-        <div class="small-10 large-10 columns que">
+        <!--知识点以及年级选择栏+错题本题目展示分栏-->
+        <div class="small-11 large-10 columns">
+            <div class="choice">
+                <div class="choice-grade clearfix">
+                    <div class="choice-grade-tip left">所在年级</div>
+                    <div class="choice-grade-cur left">
+                        <span class="choice-grade-name">一年级</span>
+                        <span class="choice-grade-name select-grade">二年级</span>
+                        <span class="choice-grade-name">三年级</span>
+                        <span class="choice-grade-name">四年级</span>
+                        <span class="choice-grade-name">五年级</span>
+                        <span class="choice-grade-name">六年级</span>
+                        <span class="choice-grade-name">初一</span>
+                        <span class="choice-grade-name">初二</span>
+                        <span class="choice-grade-name">初三</span>
+                        <span class="choice-grade-name">高一</span>
+                        <span class="choice-grade-name">高二</span>
+                        <span class="choice-grade-name">高三</span>
+                    </div>
+                </div>
+                <div class="choice-subject clearfix">
+                    <div class="choice-subject-tip left">学习科目</div>
+                    <div class="choice-subject-cur left">
+                        <span class="choice-subject-name">全部</span>
+                        <span class="choice-subject-name select-subject">语文</span>
+                        <span class="choice-subject-name">数学</span>
+                        <span class="choice-subject-name">英语</span>
+                    </div>
+                </div>
+                <div class="choice-point clearfix">
+                    <div class="choice-point-tip left">知识点</div>
+                    <div class="choice-point-cur left">
+                        <span class="choice-point-cur">代数法</span><span class="choice-point-cur">物质的检验</span><span
+                            class="choice-point-cur">三角函数</span><span class="choice-point-cur">数论</span><span
+                            class="choice-point-cur">图论</span><span class="choice-point-cur">数学分析</span><span
+                            class="choice-point-cur">高等代数</span><span class="choice-point-cur">大学英语</span><span
+                            class="choice-point-cur">TOFFEL</span><span class="choice-point-cur">IELTS</span><span
+                            class="choice-point-cur">平行</span><span class="choice-point-cur">计算机基础</span><span
+                            class="choice-point-cur">社会学</span><span class="choice-point-cur">新闻学</span><span
+                            class="choice-point-cur">机器学习</span><span class="choice-point-cur">数据挖掘</span><span
+                            class="choice-point-cur">MOOC</span><span class="choice-point-cur">C语言</span><span
+                            class="choice-point-cur">JAV</span><span class="choice-point-cur">C#</span><span
+                            class="choice-point-cur">数据结构</span><span class="choice-point-cur">伦理学</span><span
+                            class="choice-point-cur">公共关系学</span><span class="choice-point-cur">数学建模</span><span
+                            class="choice-point-cur">英语四级</span><span class="choice-point-cur">英语六级</span><span
+                            class="choice-point-cur">大话西游</span><span class="choice-point-cur">JavaScript设计模式</span><span
+                            class="choice-point-cur">格斗</span><span class="choice-point-cur">拳皇</span><span
+                            class="choice-point-cur">前端工程</span>
+                    </div>
+                </div>
+            </div>
+
+
+
             <!--showError.html-->
-            showError
+
         </div>
 
         <!--链接浮窗展示栏-->
-        <div class="small-2 large-2 columns links">
-            <div class="small-6 large-6 columns right">
-                <div class="alert-box">
-                    <strong>Yo!</strong> Alert Success
-                    <a href="#" class="close">⊗</a>
-                </div>
-                <div class="alert-box">
-                    <strong>Yo!</strong> Alert Alert
-                    <a href="#" class="close">⊗</a>
-                </div>
-                <div class="alert-box">
-                    <strong>Yo!</strong> Alert Info
-                    <a href="#" class="close">⊗</a>
-                </div>
-                <div class="alert-box">
-                    <strong>Yo!</strong> Alert Warning
-                    <a href="#" class="close">⊗</a>
-                </div>
-                <div class="alert-box">
-                    <strong>Yo!</strong> Large Alert
-                    <a href="#" class="close">⊗</a>
-                </div>
-                <div class="alert-box">
-                    <strong>Yo!</strong> Small Alert
-                    <a href="#" class="close">⊗</a>
-                </div>
+        <div class="small-1 large-2 columns links clearfix">
+            <div class="small-7 large-6 columns right">
+                <a class="alert-box" href="#">
+                    <img src="img/course.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">课程</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/teacher.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">问老师</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/newThing.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">新鲜事</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/errorQues.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">错题本</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/questions.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">试卷集</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/coin.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">金币</span>
+                </a>
             </div>
         </div>
 
     </div>
-    <div class="small-2 large-2 columns">right</div>
+    <div class="small-1 large-2 columns">right</div>
 </body>
 </html>
