--- a/source/widget/errorQuestion/showError.html
+++ b/source/widget/errorQuestion/showError.html
@@ -16,43 +16,43 @@
 </head>
 <body>
     <!--错题本题目展示分栏-->
-    <div class="small-10 large-10 columns que">
-    <div class="que-head clearfix">
-        <p class="que-head-source left norMargin"><span class="que-tips">试题来源：</span>《高考英语总复习年卡（一轮+二轮）（通用版）——学而思网校高中英语暑期期末考试》</p>
-        <p class="que-head-time right">作答时间：2015-8-16</p>
-    </div>
-    <div class="que-point">
-        <p class="que-point-know norMargin">
-            <span class="que-tips">知识点：</span>
-            <span class="knowledge">写作类-高考高分作文赏析</span><span class="knowledge">代数法</span><span class="knowledge">三角函数</span>
-        </p>
-    </div>
-    <div class="que-body">
-        <p class="que-tips que-tips-head norMargin">题目：
+    <div class="que">
+        <div class="que-head clearfix">
+            <p class="que-head-source left norMargin"><span class="que-tips">试题来源：</span>《高考英语总复习年卡（一轮+二轮）（通用版）——学而思网校高中英语暑期期末考试》</p>
+            <p class="que-head-time right">作答时间：2015-8-16</p>
+        </div>
+        <div class="que-point">
+            <p class="que-point-know">
+                <span class="que-tips">知识点：</span>
+                <span class="knowledge">写作类-高考高分作文赏析</span><span class="knowledge">代数法</span><span class="knowledge">三角函数</span>
+            </p>
+        </div>
+        <div class="que-body">
+            <p class="que-tips que-tips-head norMargin">题目：
                 <span class="que-body-content">甲从一个鱼摊上买了三条鱼，平均每条a元，又从另一个鱼摊上买了两条鱼，平均每条b元，后来他又以每条a+b2元的价格把鱼全部卖给了乙，结果发现赔了钱，
 原因是（ ）.</span>
-        </p>
-        <p class="norMargin que-body-choice">A、a&gtb</p>
-        <p class="norMargin que-body-choice">B、a&ltb</p>
-        <p class="norMargin que-body-choice">C、a=b</p>
-        <p class="norMargin que-body-choice">D、与a和b的大小无关．</p>
-        <p class="que-body-show text-right">展开答案</p>
-    </div>
-    <div class="que-answer hide">
-        <!--用户答案为字母或者数字的情况-->
-        <p class="que-tips que-answer-head norMargin">你的答案：<span class="cusAns">A</span>正确答案：<span class="corAns">B</span></p>
-        <p class="que-tips que-answer-head norMargin">解析：<span class="explanace">由题意知，5条鱼的进价为(3a+2b)元，售价为5(a+b)2，5(a+b)2−(3a+2b)=b−a2又∵b−a2<0，所以b&lta</span></p>
-    </div>
-    <div class="que-answer que-img">
-        <!--用户答案为图片的情况-->
-        <div class="que-tips que-answer-head norMargin img-answer">你的答案：</div>
-        <img class="stuAns" src="img/answer-img.png"/>
-        <p class="que-tips que-answer-head norMargin">正确答案：<span class="corAns">B</span></p>
+            </p>
+            <p class="que-body-choice">A、a&gtb</p>
+            <p class="que-body-choice">B、a&ltb</p>
+            <p class="que-body-choice">C、a=b</p>
+            <p class="que-body-choice">D、与a和b的大小无关．</p>
+            <p class="que-body-show text-right">展开答案</p>
+        </div>
+        <div class="que-answer hide">
+            <!--用户答案为字母或者数字的情况-->
+            <p class="que-tips que-answer-head norMargin">你的答案：<span class="cusAns">A</span>正确答案：<span class="corAns">B</span></p>
+            <p class="que-tips que-answer-head norMargin">解析：<span class="explanace">由题意知，5条鱼的进价为(3a+2b)元，售价为5(a+b)2，5(a+b)2−(3a+2b)=b−a2又∵b−a2<0，所以b&lta</span></p>
+        </div>
+        <div class="que-answer que-img">
+            <!--用户答案为图片的情况-->
+            <div class="que-tips que-answer-head norMargin img-answer">你的答案：</div>
+            <img class="stuAns" src="img/answer-img.png"/>
+            <p class="que-tips que-answer-head norMargin">正确答案：<span class="corAns">B</span></p>
 
-        <!--老师语音部分-->
-        <div class="que-tips que-answer-exp norMargin">老师语音：<div class="button round que-voice"><img src="img/voice-play.png" class="que-voice-play"><img src="img/vocie-img.png" alt="" class="que-voice-img"/></div></div>
-        <p class="que-tips que-answer-head norMargin">解析：<span class="explanace">由题意知，5条鱼的进价为(3a+2b)元，售价为5(a+b)2，5(a+b)2−(3a+2b)=b−a2又∵b−a2<0，所以b<a</span></p>
+            <!--老师语音部分-->
+            <div class="que-tips que-answer-exp norMargin">老师语音：<div class="button round que-voice"><img src="img/voice-play.png" class="que-voice-play"><img src="img/vocie-img.png" alt="" class="que-voice-img"/></div></div>
+            <p class="que-tips que-answer-head norMargin">解析：<span class="explanace">由题意知，5条鱼的进价为(3a+2b)元，售价为5(a+b)2，5(a+b)2−(3a+2b)=b−a2又∵b−a2<0，所以b&lta</span></p>
+        </div>
     </div>
-</div>
 </body>
 </html>
