--- a/source/widget/courseInfor/live_coures.html
+++ b/source/widget/courseInfor/live_coures.html
@@ -26,7 +26,7 @@
 					<li class="current">07月01日-08月20日 每天19:00-20:00</li>
 					<li>07月01日-08月20日 每天19:00-20:00</li>
 				</ul>
-				<div class="time-list-tips f-left">以上时间为参考时间，实际上课时间可能会有些许出入。<a href="#">点击查看详细时间表</a></div>
+				<div class="time-list-tips f-left">以上时间为参考时间，实际上课时间可能会有些许出入。<a href="#lookTime" id="lookTimeList">点击查看详细时间表</a></div>
 			</div>
 			<div class="course-content-text">
 				<span class="f-left">课程内容：</span>
@@ -101,8 +101,8 @@
 	  	 	<li>课程介绍</li>
 	  	 	<li class="last">课程评价</li>
 	  	 </ul>
-	  	 <div class="course_info_box">
-	  	 	 <div class="course-detail">
+	  	 <div class="course-info-box">
+	  	 	 <div class="course-detail" style="display:block;" id="lookTime">
 	  	 	 	<ul class="nav live_course_nav">
 	  	 	 		<li class="first">讲名称</li>
 	  	 	 		<li>上课日期</li>
@@ -152,8 +152,8 @@
 	  	 	 </div>
 	  	 	 <!-- 直播大纲 -->
 	  	 	 	 <div class="course-detail">
-	  	 	 	
-	  	 	 </div>
+	  	 	 		点播大纲
+	  	 	     </div>
 	  	 	 <!-- 点播大纲 -->
 	  	 	 <div class="course-detail">
 	  	 	 	<dl>
@@ -172,7 +172,7 @@
 	  	 	 	</dl>
 	  	 	 </div>
 	  	 	  <!-- 课程介绍 -->
-	  	 	   <div class="course-detail">22222</div>
+	  	 	   <div class="course-detail">课程评价</div>
 	  	 	   <!-- 课程评价 -->
 	  	 </div>
 	  </div>
@@ -182,6 +182,6 @@
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
-    <script type="text/javascript" src="header.js"></script>
+	<script type="text/javascript" src="ui-course-infor.js"></script>
 </body>
 </html>
