--- a/source/widget/courseInfor/open-course.html
+++ b/source/widget/courseInfor/open-course.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
     <link href="ui-course-infor.css" rel="stylesheet"></head>
+     <link type="text/css" href="http://css04.xesimg.com/page_jscrollpane.css" rel="stylesheet" media="all" />
 <body>
 	<div class="ui-course-infor-wrap">
 		<div class="course-left-player f-left">
@@ -20,51 +21,70 @@
 		</div>
 		<div class="course-center-list course-video-back f-left">
 			<h2 class="coures-name-title">人教版四升五年级上下全册数学满分班</h2>
-			<div class="course-content-text">
-				<span class="f-left">课程内容：</span>
-				<ul class="f-left">
-					<li>20场直播课程+作业反馈<a href="#" target="_blank">立即试听</a></li>
-					<li>20讲视频课程<a href="#" target="_blank">立即试听</a></li>
-				</ul>
+			<div class="open-course-list">
+			    <div class="open-course-title">课程内容：</div>
+				<div id="open-outline">
+					<div title="导数的概念与基本运算（上）" class="coures-label-info"><span>第1讲</span>导数的概念与基本运算（上）</div>
+					<div class="scrolls-content">
+						<ul class="select-list">
+							<li id="94281" class="current">
+								<a href="http://www.xueersi.com/kc/7493-29158-94281-0-0-0/" title="导数的概念与基本运算（上）知识点1">第1节</a>
+							</li>
+							<li id="94282" class=""> 
+								<a href="http://www.xueersi.com/kc/7493-29158-94282-0-0-0/" title="导数的概念与基本运算（上）例1">第2节</a>
+							</li>
+							<li id="94283" class="">
+								<a href="http://www.xueersi.com/kc/7493-29158-94283-0-0-0/" title="导数的概念与基本运算（上）知识点2">第3节</a>
+							</li>
+							<li id="94284" class="last ">
+								<a href="http://www.xueersi.com/kc/7493-29158-94284-0-0-0/" title="导数的概念与基本运算（上）例2-例3">第4节</a>
+							</li>
+						</ul>
+					</div>
+					<div title="导数的概念与基本运算（上）" class="coures-label-info"><span>第2讲</span>导数的概念与基本运算（上）</div>
+					<div class="scrolls-content">
+						<ul class="select-list">
+							<li id="94281">
+								<a href="http://www.xueersi.com/kc/7493-29158-94281-0-0-0/" title="导数的概念与基本运算（上）知识点1">第1节</a>
+							</li>
+							<li id="94282" class=""> 
+								<a href="http://www.xueersi.com/kc/7493-29158-94282-0-0-0/" title="导数的概念与基本运算（上）例1">第2节</a>
+							</li>
+							<li id="94283" class="">
+								<a href="http://www.xueersi.com/kc/7493-29158-94283-0-0-0/" title="导数的概念与基本运算（上）知识点2">第3节</a>
+							</li>
+							<li id="94284" class="last ">
+								<a href="http://www.xueersi.com/kc/7493-29158-94284-0-0-0/" title="导数的概念与基本运算（上）例2-例3">第4节</a>
+							</li><li id="94282" class=""> 
+								<a href="http://www.xueersi.com/kc/7493-29158-94282-0-0-0/" title="导数的概念与基本运算（上）例1">第5节</a>
+							</li>
+							<li id="94283" class="">
+								<a href="http://www.xueersi.com/kc/7493-29158-94283-0-0-0/" title="导数的概念与基本运算（上）知识点2">第6节</a>
+							</li>
+							<li id="94283" class="">
+								<a href="http://www.xueersi.com/kc/7493-29158-94283-0-0-0/" title="导数的概念与基本运算（上）知识点2">第6节</a>
+							</li>
+						</ul>
+					</div>
+
+				</div>	
 			</div>
-			<div class="course-content-teacher">
-				<span class="f-left">主讲老师：</span>
-				<div class="main-teacher">
+			<div class="open-course-button">
+				<div class="main-teacher f-left">
 					<div class="ui-avatar f-left"><img src="http://s02.xesimg.com/teacher/2013/08/26/13774956202468.jpg" alt=""></div>
 					<div class="teacher-avatar-infor f-left">
 						<p>朱韬老师</p>
 						<p>教学满意度<span>92.71</span></p>
 					</div>
 				</div>
-			</div>
-			<div class="course-favorable-list">
-				课程优惠：
-				<span>续报9折</span>
-				<span>送u盘</span>
-				<span>送练习册</span>
-				<span>实物礼品</span>
-			</div>
-			<div class="course-favorable-money">
-				<div class="favrble-money f-left">
-					<span>
-						课程优惠价: <em class="red">￥660</em>
-					</span> <del>原价:<em>￥825</em></del>
+				<div class="course-button-list f-right">
+					<span class="open-listen-num f-left">
+						31060
+					</span>
+					<span class="collect f-left">
+						<a id="collectId" onclick="collect(11323)" href="javascript:void(0);">收藏课程</a>
+					</span>
 				</div>
-				<ul class="f-right">
-					<li class="line">已购买<br/><em class="red">23000</em></li>
-					<li>课程满意度<br/><em class="red">92.99</em></li>
-				</ul>
-			</div>
-			<div class="course-button-list">
-			<span class="f-left">
-				<button class="medium button_shop-cart">加入购物车</button>
-			</span>
-			<span class="f-left">
-				<button class="medium alert button_apply">立即报名</button>
-			</span>
-				<span class="collect f-left">
-					<a id="collectId" onclick="collect(11323)" href="javascript:void(0);">收藏课程</a>
-				</span>
 			</div>
 		</div>
 	</div>
@@ -189,6 +209,8 @@
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
+	<script type="text/javascript" src="xue.mousewheel.js"></script>
+	<script type="text/javascript" src="xue.sidescroll.min.js"></script>
 	<script type="text/javascript" src="ui-course-infor.js"></script>
 </body>
 </html>
