--- a/source/widget/errorQuestion/showLinks.html
+++ b/source/widget/errorQuestion/showLinks.html
@@ -15,8 +15,35 @@
     <![endif]-->
 </head>
 <body>
-    <div class="small-2 large-2 columns links">
-
+    <div class="small-1 large-2 columns">
+        <div class="links">
+            <div class="small-7 large-6 columns right">
+                <a class="alert-box" href="#">
+                    <img src="img/course.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">课程</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/teacher.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">问老师</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/newThing.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">新鲜事</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/errorQues.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">错题本</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/questions.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">试卷集</span>
+                </a>
+                <a class="alert-box" href="#">
+                    <img src="img/coin.png" alt="" class="pict-tip"/>
+                    <span class="word-tip">金币</span>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
