--- a/source/widget/errorQuestion/error_question.html
+++ b/source/widget/errorQuestion/error_question.html
@@ -19,21 +19,30 @@
         <div class="small-1 large-2 columns">1231456</div>
         <div class="small-10 large-8 columns">
             <!--用户信息展示区-->
-            <div class="small-4 large-3 columns">
+            <div class="small-4 large-3 columns erq-head-min">
                 <div class="small-4 large-4 columns">
                     <img src="img/erq-head.png" alt="user-head" class="erq-head"/>
                 </div>
                 <div class="small-8 large-8 columns">
-                    <p class="erq-info">
+                    <p class="erq-info-up">
                         <span class="erq-useName">快乐的小鸟</span>
                         <span class="erq-icon"></span>
                         <span class="erq-dis">|</span>
                         <span class="erq-usePage">学习中心</span>
+
+                    </p>
+                    <p class="erq-info-below clearfix">
+                        <span class="erq-sex left"></span>
+                        <span class="erq-level left">
+                            <span class="erq-level-left left"></span>
+                            <span class="erq-level-word left">Lv.20</span>
+                            <span class="erq-level-right left"></span>
+                        </span>
                     </p>
                 </div>
             </div>
             <!--用户勋章展示区-->
-            <div class="small-8 large-9 columns clearfix">
+            <div class="small-4 large-4 columns clearfix erq-head-prize">
                 <img src="img/prize1.png" alt="user-praize" class="erq-prize right"/>
                 <img src="img/prize2.png" alt="user-praize" class="erq-prize right"/>
                 <img src="img/prize3.png" alt="user-praize" class="erq-prize right"/>
