--- a/source/widget/live/live.html
+++ b/source/widget/live/live.html
@@ -4,27 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>live</title>
+    <title>看直播</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
     <link href="live.css" rel="stylesheet">
-    <script src="../../lib/jQuery/1.11.1/jquery.js"></script>
-    <script src="live.js"></script>
 </head>
 <body>
 <div class="live-container">
+    <!--今日直播标题 -->
     <div class="live-title">
         <span>今日直播</span>
         <p></p>
-        <div class="live-scroll-btn-container">
-            <div class="live-scroll-btn"></div>
-            <div class="live-scroll-btn"></div>
-            <div class="live-scroll-btn"></div>
-        </div>
+        <ul class="live-scroll-btn-container">
+            <li class="live-scroll-btn-on"></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
+    <!-- 轮播图 -->
     <div class="live-scroll-container">
         <div class="live-scroll-box-container">
             <div class="live-scroll-box">
@@ -239,10 +239,12 @@
             </div>
         </div>
     </div>
+    <!-- 历史直播标题 -->
     <div class="live-title">
         <span>历史直播</span>
         <p></p>
     </div>
+    <!-- 历史直播卡片 -->
     <div class="live-list">
         <div class="live-card">
             <div class="live-course-box">
@@ -382,5 +384,7 @@
         </div>
     </div>
 </div>
+<script src="../../lib/jQuery/1.11.1/jquery.js"></script>
+<script src="live.js"></script>
 </body>
 </html>
