--- a/source/widget/fresh/coment.html
+++ b/source/widget/fresh/coment.html
@@ -47,3 +47,170 @@
              </form>  -->
    </div>  
 </div>
+
+<!--  <div class="fresh-notCourse">暂无评论</div> -->
+                      <!--  <div class="fresh-comment-list">
+                          <div class="fresh-avatar fresh-avatar-mini left">
+                             <a href="###"  target="_blank"><img src="img/fresh_avatar.png"></a>
+                             <span><img src="img/fresh_avatar.png"></span>
+                          </div>
+                          <div class="fresh-detail">
+                              <div class="fresh-text">
+                                  <div class="fresh-uesr">
+                                     <span class="left">易烊千楠qq</span><span class="left">：</span>
+                                     <a href="###"  target="_blank" class="left">易烊千楠</a>
+                                     <i class="fresh-v-red left"></i>
+                                     <span class="left">：</span>
+                                  </div>
+                                  <div class="fresh-info">
+                                       <em class="fresh-font-blue">@杜春雨</em>
+                                       亲爱的孩子们，昨天的小新电台&mdash;&mdash;《五月的草场》有没有收听呢？那么今天出一个小题目&mdash;&mdash;草原上的人用什么办法消灭蝗虫呢？随机奖励正确的<img alt="" src="http://img04.xesimg.com/icon/emoji/em_4.png" title="挤眼">五个答案~~加油哦！<img alt="" src="http://img04.xesimg.com/icon/emoji/em_46.png" title="出拳">收听地址： <a target="_blank" href="http://t.xueersi.com/7boW01nx">http://t.xueersi.com/7boW01nx</a>
+                                  </div>
+                              </div>
+                              <div class="fresh-barinfo">
+                                 <span class="fresh-time left">11小时前</span> 
+                                 <div class="fresh-right right">
+                                    <span class="fresh-right-btn">
+                                       <span class="fresh-addGold">
+                                          <i class="fresh-addGold-icon"></i>
+                                          <strong>5金币</strong>
+                                       </span>
+                                     </span>
+                                     <span class="fresh-right-btn">
+                                         <a title="评论" href="javascript:void(0);">删除</a>
+                                     </span>
+                                     <span class="fresh-right-btn">
+                                         <a title="评论" href="javascript:void(0);">评论</a>
+                                     </span>
+                                 </div>
+                              </div>
+                              <form class="fresh-comment-form fresh-comment-speak" action="javascript:void(0);">
+                                 <div class="fresh-comment-textarea">
+                                   <textarea> // @武嘉文 @顾斐 metallurgy冶金学[可爱]finance金融; 财政学[调皮]mass-communication大众传播学[出拳]</textarea>
+                                 </div>
+                                 <div class="fresh-comment-func">
+                                     <i class="fresh-comment-emote-btn"></i>
+                                     <a href="javascript:void(0);" class="fresh-comment-emotetext">表情</a>
+                                     <div class="fresh-comment-btn">
+                                        <div class="fresh-comment-submit-btn">
+                                           <a href="###" class="small radius button">评论</a>
+                                        </div>
+                                     </div>
+                                 </div>
+                             </form> 
+                          </div>  
+                      </div> -->
+                       <!--置顶线条开始-->
+                      <!--  <div class="fresh-comment-line">
+                         <span class="fresh-line-tip">以上<strong>5</strong> 条评论被老师置顶奖励</span>
+                      </div>  -->
+                       <!---->
+                       <!--置顶线条结束-->
+
+                       <!-- <div class="fresh-comment-list">
+                           <div class="fresh-avatar fresh-avatar-mini left">
+                              <a href="###"  target="_blank"><img src="img/fresh_avatar.png"></a>
+                              <span><img src="img/fresh_avatar.png"></span>
+                           </div>
+                           <div class="fresh-detail">
+                               <div class="fresh-text">
+                                   <div class="fresh-uesr">
+                                      <span class="left">易烊千楠qq</span><span class="left">：</span>
+                                      <a href="###"  target="_blank" class="left">易烊千楠</a>
+                                      <i class="fresh-v-red left"></i>
+                                      <span class="left">：</span>
+                                   </div>
+                                   <div class="fresh-info">
+                                        <em class="fresh-font-blue">@杜春雨</em>
+                                        亲爱的孩子们，昨天的小新电台&mdash;&mdash;《五月的草场》有没有收听呢？那么今天出一个小题目&mdash;&mdash;草原上的人用什么办法消灭蝗虫呢？随机奖励正确的<img alt="" src="http://img04.xesimg.com/icon/emoji/em_4.png" title="挤眼">五个答案~~加油哦！<img alt="" src="http://img04.xesimg.com/icon/emoji/em_46.png" title="出拳">收听地址： <a target="_blank" href="http://t.xueersi.com/7boW01nx">http://t.xueersi.com/7boW01nx</a>
+                                   </div>
+                               </div>
+                               <div class="fresh-barinfo">
+                                  <span class="fresh-time left">11小时前</span> 
+                                  <div class="fresh-right right">
+                                     <span class="fresh-right-btn">
+                                        <span class="fresh-addGold">
+                                           <i class="fresh-addGold-icon"></i>
+                                           <strong>5金币</strong>
+                                        </span>
+                                      </span>
+                                      <span class="fresh-right-btn">
+                                          <a title="评论" href="javascript:void(0);">删除</a>
+                                      </span>
+                                      <span class="fresh-right-btn">
+                                          <a title="评论" href="javascript:void(0);">评论</a>
+                                      </span>
+                                  </div>
+                               </div>
+                               <form class="fresh-comment-form fresh-comment-speak" action="javascript:void(0);">
+                                  <div class="fresh-comment-textarea">
+                                    <textarea> // @武嘉文 @顾斐 metallurgy冶金学[可爱]finance金融; 财政学[调皮]mass-communication大众传播学[出拳]</textarea>
+                                  </div>
+                                  <div class="fresh-comment-func">
+                                      <i class="fresh-comment-emote-btn"></i>
+                                      <a href="javascript:void(0);" class="fresh-comment-emotetext">表情</a>
+                                      <div class="fresh-comment-btn">
+                                         <div class="fresh-comment-submit-btn">
+                                            <a href="###" class="small radius button">评论</a>
+                                         </div>
+                                      </div>
+                                  </div>
+                              </form> 
+                           </div>  
+                       </div>
+                       
+                       <div class="fresh-comment-list">
+                           <div class="fresh-avatar fresh-avatar-mini left">
+                              <a href="###"  target="_blank"><img src="img/fresh_avatar.png"></a>
+                              <span><img src="img/fresh_avatar.png"></span>
+                           </div>
+                           <div class="fresh-detail">
+                               <div class="fresh-text">
+                                   <div class="fresh-uesr">
+                                      <span class="left">易烊千楠qq</span>
+                                      <span class="left">：</span>
+                                   </div>
+                                   <div class="fresh-info">
+                                        <em class="fresh-font-blue">@杜春雨</em>
+                                        亲爱的孩子们，昨天的小新电台&mdash;&mdash;《五月的草场》有没有收听呢？那么今天出一个小题目&mdash;&mdash;草原上的人用什么办法消灭蝗虫呢？随机奖励正确的<img alt="" src="http://img04.xesimg.com/icon/emoji/em_4.png" title="挤眼">五个答案~~加油哦！<img alt="" src="http://img04.xesimg.com/icon/emoji/em_46.png" title="出拳">收听地址： <a target="_blank" href="http://t.xueersi.com/7boW01nx">http://t.xueersi.com/7boW01nx</a>
+                                   </div>
+                               </div>
+                               <div class="fresh-barinfo">
+                                  <span class="fresh-time left">11小时前</span> 
+                                  <div class="fresh-right right">
+                                     <span class="fresh-right-btn">
+                                        <span class="fresh-addGold">
+                                           <i class="fresh-addGold-icon"></i>
+                                           <strong>5金币</strong>
+                                        </span>
+                                      </span>
+                                      <span class="fresh-right-btn">
+                                          <a title="评论" href="javascript:void(0);">删除</a>
+                                      </span>
+                                      <span class="fresh-right-btn">
+                                          <a title="评论" href="javascript:void(0);">评论</a>
+                                      </span>
+                                  </div>
+                               </div>
+                               <form class="fresh-comment-form fresh-comment-speak" action="javascript:void(0);">
+                                  <div class="fresh-comment-textarea">
+                                    <textarea> // @武嘉文 @顾斐 metallurgy冶金学[可爱]finance金融; 财政学[调皮]mass-communication大众传播学[出拳]</textarea>
+                                  </div>
+                                  <div class="fresh-comment-func">
+                                      <i class="fresh-comment-emote-btn"></i>
+                                      <a href="javascript:void(0);" class="fresh-comment-emotetext">表情</a>
+                                      <div class="fresh-comment-btn">
+                                         <div class="fresh-comment-submit-btn">
+                                            <a href="###" class="small radius button">评论</a>
+                                         </div>
+                                      </div>
+                                  </div>
+                              </form> 
+                           </div>  
+                       </div> -->
+
+                       <!--更多评论结束-->
+                       <!-- <div class="fresh-comment-more">
+                           <a target="_blank" href="###">更多评论</a>
+                       </div> -->
+                      <!--更多评论结束-->
